GNOME Bugzilla – Bug 660164
Color correction applied on the wrong display
Last modified: 2012-02-01 11:53:40 UTC
- Setup: external display (no color correction) and laptop display (color corrected). - Open gnome-c-c, go to Display - Disable the laptop display - Enable the laptop display again - Color correction is applied *also* to the external display, even though the device has no profiles at all associated with it in the panel. Actually, there's really no way of disabling it, since the device still appears without any profile or correction. I can "feel" the color correction, though, as the profile for my laptop display looks *ugly* on the external monitor :) Fun things to try at this point: - if you disable and re-enable the laptop display again, it looks like the external display finally loses the stray color correction - if you do it one more time, the bug will kick in again - these two states will alternate each time you disable and re-enable the laptop display
Created attachment 197587 [details] [review] test patch Can you try this test patch please. It seems to fix the issue for me. Thanks!
This solves the bug for me, though when using gnome-settings-daemon with the patch I see these warnings on the terminal when turning off the laptop display: (gnome-settings-daemon:26929): GnomeDesktop-CRITICAL **: gnome_rr_crtc_get_gamma: assertion `crtc != NULL' failed (gnome-settings-daemon:26929): color-plugin-WARNING **: failed to set xrandr-Lenovo Group Limited gamma tables: no data in the CLUT array
(In reply to comment #2) > This solves the bug for me, though when using gnome-settings-daemon with the > patch I see these warnings on the terminal when turning off the laptop display: Ahh, good catch, thanks. commit 6810be19369870bab4eb44780c742b6d078e5e97 Author: Richard Hughes <richard@hughsie.com> Date: Mon Oct 3 15:09:15 2011 +0100 color: Fix critical warning if the user disables the internal LCD screen Note: this fix also applies to any output we've disabled but left connected.
I've pushed both patches to g-s-d master, so could you please test that and tell me how you get on. Thanks!
(In reply to comment #4) > I've pushed both patches to g-s-d master, so could you please test that and > tell me how you get on. Thanks! I still see "(gnome-settings-daemon:15142): color-plugin-WARNING **: failed to set xrandr-Lenovo Group Limited gamma tables: gamma size is zero" but it appears to work fine.