color: Reset the gamma tables when the screen configuration changes

We have to reset the gamma tables each time, as if the primary output
has changed then different crtcs are going to be used.

This prevents the profile VCGT being used on the wrong monitor.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=660164